# purple-auth-client

./: .travis.yml  README.md  purple_auth_client.py  pyproject.toml  ricks_auth_service_client.py
.github/workflows/: publish.yml  test.yml
integration-test/: docker-compose.yml  integration_test.py  setup.sh  teardown.sh
integration-test/data/mock-frontend/: Dockerfile  app.py
integration-test/data/mock-mailgun/: Dockerfile  app.py
integration-test/data/nginx/: app.conf
tests/: test_service.py
