[tool.poetry]
name = "purple-auth-client"
version = "1.0.0"
description = "Client library for Purple Auth"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
python-jwt = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.4.0"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.1"
pytest-cov = "^2.10.1"
pytest = "^6.2.1"
Faker = "^10.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
